--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TraktTV</string>
+    <string name="search_title">Busca</string>
+    <string name="search_hint">Busca</string>
+    <string name="poster">Movie poster</string>
 </resources>
